# sql-optimizer-cli

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
docs/: architecture.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs  output.rs
src/core/: analyzer.rs  mod.rs  types.rs
src/database/: connection.rs  mod.rs  mysql.rs  postgresql.rs
src/patterns/: mod.rs
src/security/: mod.rs
src/utils/: mod.rs
